fixed paths for the rest

--- a/300x600_RedDeer_FRE-1268-01_NM_10for50/index.html
+++ b/300x600_RedDeer_FRE-1268-01_NM_10for50/index.html
@@ -100,13 +100,13 @@
                 <path d="M10.91,1.277c-2.902-2.073-6.883-1.56-9.178,1.08L0.279,1.319L0,6.603l4.846-2.022L3.357,3.519c1.648-1.753,4.389-2.064,6.4-0.627c2.191,1.567,2.703,4.627,1.135,6.82c-1.566,2.194-4.625,2.704-6.82,1.137c-0.939-0.673-1.615-1.66-1.896-2.779L0.254,8.553c0.396,1.575,1.344,2.963,2.668,3.907c3.082,2.204,7.383,1.488,9.584-1.596C14.711,7.78,13.994,3.48,10.91,1.277z" />
             </svg>
         </a>
-        <img src="person.jpg" alt="" class="size">
-        <img src="text.png" alt="" class="size text">
+        <img src="/300x600_RedDeer_FRE-1268-01_NM_10for50/person.jpg" alt="" class="size">
+        <img src="/300x600_RedDeer_FRE-1268-01_NM_10for50/text.png" alt="" class="size text">
 
 
         <div class="size white-bg">
-            <img src="offer.png" alt="" class="size offer1">
-            <img src="sticker.png" alt="" class="size sticker" style="transform: matrix(1, 0, 0, 1, 0, 0);">
+            <img src="/300x600_RedDeer_FRE-1268-01_NM_10for50/offer.png" alt="" class="size offer1">
+            <img src="/300x600_RedDeer_FRE-1268-01_NM_10for50/sticker.png" alt="" class="size sticker" style="transform: matrix(1, 0, 0, 1, 0, 0);">
         </div>
 
         <svg class="size" id="button" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -143,10 +143,10 @@
         </svg>
 
 
-        <img src="logo-bg-01.png" alt="Freedom Mobile" class="size logo-bg-01">
-        <img src="logo-bg-02.png" alt="Freedom Mobile" class="size logo-bg-02">
-        <img src="logo.png" alt="Freedom Mobile Logo" class="size">
-        <img src="legal.png" alt="" class="size legal">
+        <img src="/300x600_RedDeer_FRE-1268-01_NM_10for50/logo-bg-01.png" alt="Freedom Mobile" class="size logo-bg-01">
+        <img src="/300x600_RedDeer_FRE-1268-01_NM_10for50/logo-bg-02.png" alt="Freedom Mobile" class="size logo-bg-02">
+        <img src="/300x600_RedDeer_FRE-1268-01_NM_10for50/logo.png" alt="Freedom Mobile Logo" class="size">
+        <img src="/300x600_RedDeer_FRE-1268-01_NM_10for50/legal.png" alt="" class="size legal">
         <a id="r43_clickTag" onclick="javascript:window.open(window.clickTag)" target="_blank"></a>
     </div>
 
