--- a/728x90_FRE-1226_Samsung_Beyond/index.html
+++ b/728x90_FRE-1226_Samsung_Beyond/index.html
@@ -101,13 +101,13 @@
         </a>
         <img src="bg.jpg" alt="" class="size bg">
 
-        <img src="text-f1.png" alt="" class="size text-f1">
-        <img src="text-f2.png" alt="" class="size text-f2">
-        <img src="aside.png" alt="" class="size aside">
+        <img src="/728x90_FRE-1226_Samsung_Beyond/text-f1.png" alt="" class="size text-f1">
+        <img src="/728x90_FRE-1226_Samsung_Beyond/text-f2.png" alt="" class="size text-f2">
+        <img src="/728x90_FRE-1226_Samsung_Beyond/aside.png" alt="" class="size aside">
 
-        <img src="logo.png" alt="Freedom Mobile Logo" class="size">
-        <img src="legal.png" alt="Freedom Mobile Legal" class="size legal">
-        <img src="button.png" alt="" class="size" id="button">
+        <img src="/728x90_FRE-1226_Samsung_Beyond/logo.png" alt="Freedom Mobile Logo" class="size">
+        <img src="/728x90_FRE-1226_Samsung_Beyond/legal.png" alt="Freedom Mobile Legal" class="size legal">
+        <img src="/728x90_FRE-1226_Samsung_Beyond/button.png" alt="" class="size" id="button">
         <a id="r43_clickTag" onclick="javascript:window.open(window.clickTag)" target="_blank"></a>
     </div>
 
