--- a/728x90_FRE-1253-iPhone_8_/index.html
+++ b/728x90_FRE-1253-iPhone_8_/index.html
@@ -166,21 +166,21 @@
         </a>
 
         <!-- <img src="bg.jpg" alt=""> -->
-        <!-- <img src="bg.png" class="bg" alt="background"> -->
+        <!-- <img src="/728x90_FRE-1253-iPhone_8_/bg.png" class="bg" alt="background"> -->
 
-        <img src="logo.png" alt="Freedom Mobile Logo" class="size logo">
+        <img src="/728x90_FRE-1253-iPhone_8_/logo.png" alt="Freedom Mobile Logo" class="size logo">
 
         <!--<img src="text1.png" alt="iPhone Xs Max" class="size text1">-->
-        <img src="text1.png" alt="GREAT iPHONE. GREAT OFFER." class="size text1">
-        <img src="text2.png" alt="iPHONE 8.ONLY $10* /mo. on select Big Gig plans. Save $579." class="size text2">
-        <img src="text3.png" alt="Learn More" class="size text3">
+        <img src="/728x90_FRE-1253-iPhone_8_/text1.png" alt="GREAT iPHONE. GREAT OFFER." class="size text1">
+        <img src="/728x90_FRE-1253-iPhone_8_/text2.png" alt="iPHONE 8.ONLY $10* /mo. on select Big Gig plans. Save $579." class="size text2">
+        <img src="/728x90_FRE-1253-iPhone_8_/text3.png" alt="Learn More" class="size text3">
 
         <!-- <img src="test2.png" alt="iPhone Xs" class="size phone"> -->
 
-        <img src="label.png" alt="iPhone 8" class="size label" id="label">
-        <img src="phone.png" alt="iPhone 8" class="size phone" id="phone">
+        <img src="/728x90_FRE-1253-iPhone_8_/label.png" alt="iPhone 8" class="size label" id="label">
+        <img src="/728x90_FRE-1253-iPhone_8_/phone.png" alt="iPhone 8" class="size phone" id="phone">
 
-        <img src="legal.png" alt="" class="size legal">
+        <img src="/728x90_FRE-1253-iPhone_8_/legal.png" alt="" class="size legal">
 
 
         <a id="r43_clickTag" onclick="javascript:window.open(window.clickTag)" target="_blank"></a>
