--- a/300x250_RedDeer_FRE-1268-01_NM_10for50/index.html
+++ b/300x250_RedDeer_FRE-1268-01_NM_10for50/index.html
@@ -102,13 +102,13 @@
             </svg>
         </a>
         <img src="bg.jpg" alt="" class="size">
-        <img src="person.png" alt="" class="size">
-        <img src="text.png" alt="" class="size text">
+        <img src="/300x250_RedDeer_FRE-1268-01_NM_10for50/person.png" alt="" class="size">
+        <img src="/300x250_RedDeer_FRE-1268-01_NM_10for50/text.png" alt="" class="size text">
 
 
         <div class="size white-bg">
-            <img src="offer.png" alt="" class="size offer1">
-            <img src="sticker.png" alt="" class="size sticker" style="transform: matrix(1, 0, 0, 1, 0, 0);">
+            <img src="/300x250_RedDeer_FRE-1268-01_NM_10for50/offer.png" alt="" class="size offer1">
+            <img src="/300x250_RedDeer_FRE-1268-01_NM_10for50/sticker.png" alt="" class="size sticker" style="transform: matrix(1, 0, 0, 1, 0, 0);">
         </div>
 
         <svg class="size svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -141,10 +141,10 @@
         </svg>
 
 
-        <img src="logo-bg-01.png" alt="Freedom Mobile" class="size logo-bg-01">
-        <img src="logo-bg-02.png" alt="Freedom Mobile" class="size logo-bg-02">
-        <img src="logo.png" alt="Freedom Mobile Logo" class="size">
-        <img src="legal.png" alt="" class="size legal">
+        <img src="/300x250_RedDeer_FRE-1268-01_NM_10for50/logo-bg-01.png" alt="Freedom Mobile" class="size logo-bg-01">
+        <img src="/300x250_RedDeer_FRE-1268-01_NM_10for50/logo-bg-02.png" alt="Freedom Mobile" class="size logo-bg-02">
+        <img src="/300x250_RedDeer_FRE-1268-01_NM_10for50/logo.png" alt="Freedom Mobile Logo" class="size">
+        <img src="/300x250_RedDeer_FRE-1268-01_NM_10for50/legal.png" alt="" class="size legal">
         <a id="r43_clickTag" onclick="javascript:window.open(window.clickTag)" target="_blank"></a>
     </div>
 
