--- a/728x90_RedDeer_FRE-1268-01_NM_10for50/index.html
+++ b/728x90_RedDeer_FRE-1268-01_NM_10for50/index.html
@@ -103,29 +103,29 @@
         </a>
 
 
-        <img src="orange_bg.jpg" alt="" class="size">
-        <img src="person.png" class="size">
+        <img src="/728x90_RedDeer_FRE-1268-01_NM_10for50/orange_bg.jpg" alt="" class="size">
+        <img src="/728x90_RedDeer_FRE-1268-01_NM_10for50/person.png" class="size">
 
         <div id="lw3">
-            <img src="text.png" alt="" class="size text">
+            <img src="/728x90_RedDeer_FRE-1268-01_NM_10for50/text.png" alt="" class="size text">
         </div>
 
         <div class="white-bg">
-            <img src="offer.png" alt="" class="size offer1">
-            <img src="sticker.png" alt="" class="size sticker" style="transform: matrix(1, 0, 0, 1, 0, 0);">
+            <img src="/728x90_RedDeer_FRE-1268-01_NM_10for50/offer.png" alt="" class="size offer1">
+            <img src="/728x90_RedDeer_FRE-1268-01_NM_10for50/sticker.png" alt="" class="size sticker" style="transform: matrix(1, 0, 0, 1, 0, 0);">
 
         </div>
 
         <!-- 	<div class="line-wrap" id="lw4">
             <img src="offer.png" alt="" class="size offer2">
         </div> -->
-        <img src="logo-back.png" alt="Freedom Mobile Logo" class="logo-back size">
-        <img src="logo-back-02.png" alt="Freedom Mobile Logo" class="logo-back-02 size">
-        <img src="logo.png" alt="Freedom Mobile Logo" class="logo size">
-        <img src="button.png" alt="" class="size button" id="button">
+        <img src="/728x90_RedDeer_FRE-1268-01_NM_10for50/logo-back.png" alt="Freedom Mobile Logo" class="logo-back size">
+        <img src="/728x90_RedDeer_FRE-1268-01_NM_10for50/logo-back-02.png" alt="Freedom Mobile Logo" class="logo-back-02 size">
+        <img src="/728x90_RedDeer_FRE-1268-01_NM_10for50/logo.png" alt="Freedom Mobile Logo" class="logo size">
+        <img src="/728x90_RedDeer_FRE-1268-01_NM_10for50/button.png" alt="" class="size button" id="button">
 
 
-        <img src="legal.png" alt="" class="size legal">
+        <img src="/728x90_RedDeer_FRE-1268-01_NM_10for50/legal.png" alt="" class="size legal">
         <a id="r43_clickTag" onclick="javascript:window.open(window.clickTag)" target="_blank"></a>
     </div>
 
