fixed file paths again

--- a/728x90_FRE-1226_Samsung_Beyond/index.html
+++ b/728x90_FRE-1226_Samsung_Beyond/index.html
@@ -99,7 +99,7 @@
                 <path d="M10.91,1.277c-2.902-2.073-6.883-1.56-9.178,1.08L0.279,1.319L0,6.603l4.846-2.022L3.357,3.519c1.648-1.753,4.389-2.064,6.4-0.627c2.191,1.567,2.703,4.627,1.135,6.82c-1.566,2.194-4.625,2.704-6.82,1.137c-0.939-0.673-1.615-1.66-1.896-2.779L0.254,8.553c0.396,1.575,1.344,2.963,2.668,3.907c3.082,2.204,7.383,1.488,9.584-1.596C14.711,7.78,13.994,3.48,10.91,1.277z" />
             </svg>
         </a>
-        <img src="bg.jpg" alt="" class="size bg">
+        <img src="/728x90_FRE-1226_Samsung_Beyond/bg.jpg" alt="" class="size bg">
 
         <img src="/728x90_FRE-1226_Samsung_Beyond/text-f1.png" alt="" class="size text-f1">
         <img src="/728x90_FRE-1226_Samsung_Beyond/text-f2.png" alt="" class="size text-f2">
