--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <button class="btn btn-default p-4" id="reload">Reload Frames</button>
 
-    <section class="flex gap-8 p-8 flex-wrap w-full">
+    <section class="flex gap-8 p-8 flex-wrap w-full items-center justify-center">
         <div class="flex gap-4 flex-wrap items-center justify-center">
             <div class="lb">
                 <iframe src="728x90_FRE-1226_Samsung_Beyond"></iframe>
